Fix CSS table text alignment for very long lines
Chrome has a default "verticle-align: middle" for <td>.

--- a/example/diff-table.scss
+++ b/example/diff-table.scss
@@ -48,6 +48,10 @@ $diff-bg-color-none-block-alternative: mix($diff-bg-color, $diff-table-sidebar-c
     font-weight: 700;
   }
 
+  td {
+    vertical-align: baseline;
+  }
+
   td,
   th {
     border-collapse: separate;
